Archive2/bc/db2ab1bef16615/output
main.cpp:2:17: warning: unused parameter 'x' [-Wunused-parameter]
  void DoThis(T x) {}
                ^
main.cpp:3:24: warning: unused parameter 'x' [-Wunused-parameter]
  static void DoThat(T x) {}
                       ^
main.cpp:8:5: error: use of undeclared identifier 'DoThis'
    DoThis(x);  // Invalid!
    ^
    this->
main.cpp:15:20: note: in instantiation of member function 'Derived<int>::Work' requested here
    Derived<int>{}.Work(1);
                   ^
main.cpp:2:8: note: must qualify identifier to find this declaration in dependent base class
  void DoThis(T x) {}
       ^
main.cpp:9:5: error: use of undeclared identifier 'DoThat'
    DoThat(x);  // Invalid!
    ^
    this->
main.cpp:3:15: note: must qualify identifier to find this declaration in dependent base class
  static void DoThat(T x) {}
              ^
2 warnings and 2 errors generated.
